# SuperMarioBros-C-Android

./: .gitignore  CMakeLists.txt
.github/workflows/: android-build.yml
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
source/: Configuration.cpp  Main.cpp  OpenGLRendering.cpp  OpenGLRendering.hpp  TouchControls.cpp  TouchControls.hpp
source/Util/: Video.cpp
